turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:29: error: '=>' expected but 'case' found.
		case 1 => avance; 
                ^