turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {

	var c = 0
	c = 0

	while (c < colors.length)
	{
		if (colors(c) == getCouleurSol())
		{
			
			testMVT(state, c, rule)
			c = colors.length
		}

		c = c + 1
	}

        
}

def testMVT(state:Int, c:Int, rule:Array[Array[Array[Int]]] )
{
	rule(state)(c) match 
	{
		case 0 
		case 1 => avance; 
		case 2 => gauche; avance;
		case 4 => droite; droite; avance;
		case 8 => droite; avance;
	}
}


def setCouleurSol(couleur:Color)
{
	setCouleurBrosse(couleur)
	baisseBrosse()
	leveBrosse()
	
}
